fix color contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,11 @@ credits: https://www.w3schools.com/howto/howto_css_glowing_text.asp
 .btn {
   margin: 5px;
   border: solid 2px #f5f5f5;
+  color: black;
+}
+
+.btn:hover {
+  color: black;
 }
 .btn-group-vertical {
   display: flex;
@@ -154,6 +159,10 @@ credits: https://www.w3schools.com/howto/howto_css_glowing_text.asp
   border-radius: 10px;
 }
 
+.leader {
+  animation: text-glow 1s ease-in-out infinite;
+}
+
 /* ------ MESSAGES WHEN GAME ENDS ------ */
 .img-msg {
   height: 30px;
@@ -178,6 +187,3 @@ credits: https://www.w3schools.com/howto/howto_css_glowing_text.asp
   }
 }
 
-.leader {
-  animation: text-glow 1s ease-in-out infinite;
-}
